tests/NormalTests/paczka1/fuzzy1/52483340.err
Error in line 4: JCG2Kng S706 34,0
Error in line 17: glP6T116 S568 73,7
Error in line 21: 7VIOCoodal S706 98,25
Error in line 26: 7VIOCoodal S706 316,1
Error in line 12: HptCgeAd2J2 S568 23,3
Error in line 30: JCG2Kng S489 11,9
Error in line 31: JCG2Kng A611 96,6
